--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
-	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/prevayler-2.3.jar" sourcepath="src/httprevayler/lib/prevayler-2.3-src.zip"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jetty-all-7.1.6.v20100715.jar" sourcepath="src/httprevayler/lib/jetty-all-7.1.6.v20100715-sources.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-logging-1.1.1.jar"/>
@@ -13,6 +11,9 @@
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/resolver.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/groovy-all-2.1.2.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/lib/ant.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
