--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,9 @@
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/groovy-all-2.1.2.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-core-2.2.0.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-databind-2.2.3.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-annotations-2.2.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
