--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/prevayler-2.3.jar" sourcepath="src/httprevayler/lib/prevayler-2.3-src.zip"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jetty-all-7.1.6.v20100715.jar" sourcepath="src/httprevayler/lib/jetty-all-7.1.6.v20100715-sources.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-logging-1.1.1.jar"/>
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-databind-2.2.3.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-annotations-2.2.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
