--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/prevayler-2.3.jar" sourcepath="src/httprevayler/lib/prevayler-2.3-src.zip"/>
-	<classpathentry kind="lib" path="src/httprevayler/lib/jetty-all-7.1.6.v20100715.jar" sourcepath="src/httprevayler/lib/jetty-all-7.1.6.v20100715-sources.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/http-builder-0.6.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/httpclient-4.2.5.jar"/>
@@ -12,10 +11,18 @@
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/resolver.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/httpclient/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/groovy-all-2.1.2.jar"/>
-	<classpathentry kind="lib" path="src/httprevayler/lib/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-core-2.2.0.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-databind-2.2.3.jar"/>
 	<classpathentry kind="lib" path="src/httprevayler/lib/jackson-annotations-2.2.3.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-http-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-io-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-jndi-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-security-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-server-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-servlet-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-servlets-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/jetty/jetty-util-9.1.1.v20140108.jar"/>
+	<classpathentry kind="lib" path="src/httprevayler/lib/servlet-api-3.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
